--- a/stylesheets/__constants.styl
+++ b/stylesheets/__constants.styl
@@ -1,15 +1,12 @@
 
 
 /* ====================== COLORS ====================== */
-
-
-
-
 font-size       = 13px
 font-size-small = 0.9em
 font-size-tiny  = 0.8em
 
 padding         = 10px
+dimension       = 20px
 
 /* HEADER */
 header_height   = 48px
