--- a/stylesheets/tuktuk.font.styl
+++ b/stylesheets/tuktuk.font.styl
@@ -41,6 +41,8 @@ h6
     font-style: italic
   &.underline
     border-bottom: 1px solid
+  &.uppercase
+    text-transform: uppercase
   &.left
     text-align: left
   &.right
@@ -49,14 +51,16 @@ h6
     text-align: center
   &.justify
     text-align: justify
+  &.tiny
+    font-size: font-size-tiny
   &.small
-    font-size: 0.8em
+    font-size: font-size-small
   &.big
-    font-size: 1.2em
+    font-size: font-size-big
 /* ========================= BASIC ELEMENTS ========================= */
 p
   font-size: s = 1.1em
   line-height: s
 small
-  font-size: size = 0.85em
+  font-size: size = font-size-small
   line-height: size
