--- a/package/theme.tuktuk.styl
+++ b/package/theme.tuktuk.styl
@@ -1,23 +1,15 @@
 @import "__vendor.styl"
-
+@import "__theme.styl"
 /* ====================== FONT-FACE ====================== */
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700")
-color = #16A6B6
-color_secondary = #BFBFBF
-color_cancel    = #EE6557
-color_accept    = #3FB58E
-
-bck_lightest    = #fff
-bck_light       = #f7f7f7
-bck_dark        = #282828
-bck_darkest     = #181818
-
+// @import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,700")
 
 body
   color: #000
   font-size: 1em
+  font-size: 13px
   line-height: 1.2
-  font-family: "Source Sans Pro"
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 300
 
   & > header
