--- a/stylesheets/tuktuk.layout.styl
+++ b/stylesheets/tuktuk.layout.styl
@@ -26,7 +26,6 @@ body
   padding: 0
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: none
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
 
   & *
     box-sizing: border-box
@@ -51,8 +50,14 @@ body
     padding: 16px 0
 
   & > section
+    background: none
+
     &.padding
       padding: 48px 0
+
+    &.underline
+      padding: 0
+
     &.landing
       padding: 64px 0
       & h1
