--- a/stylesheets/tuktuk.list.styl
+++ b/stylesheets/tuktuk.list.styl
@@ -1,8 +1,10 @@
 ul
   list-style: disc
 
-  &:not(.none) li
+  &.square li, &.circle li
     margin: 0 0 5px 18px
+
+  &:not(.none) li
     padding: 0
     background: none
 
