--- a/widgets/boxes/tuktuk.boxes.styl
+++ b/widgets/boxes/tuktuk.boxes.styl
@@ -18,6 +18,16 @@ dimension     = 16px
     display-box()
     box-orient(vertical)
 
+    & > header, > footer
+      box-flex(0)
+      display: block
+      height: header_height
+      line-height: header_height
+      padding: (dimension / 2)
+      & > *
+        height: h = (header_height - dimension)
+        line-height: h
+
   & aside
     box-flex(0)
     width: aside_width
@@ -47,15 +57,8 @@ dimension     = 16px
     box-flex(1)
     z-index: 0
 
-  & header, footer
-    box-flex(0)
-    display: block
-    height: header_height
-    line-height: header_height
-    padding: (dimension / 2)
-    & > *
-      height: h = (header_height - dimension)
-      line-height: h
+
+
 
   & article
     box-flex(1)
