--- a/stylesheets/__constants.styl
+++ b/stylesheets/__constants.styl
@@ -2,6 +2,7 @@
 
 /* ====================== COLORS ====================== */
 font-size       = 13px
+font-size-big   = 1.2em
 font-size-small = 0.9em
 font-size-tiny  = 0.8em
 
