--- a/stylesheets/tuktuk.font.styl
+++ b/stylesheets/tuktuk.font.styl
@@ -1,3 +1,6 @@
+@import "__vendor.styl"
+@import "__constants.styl"
+
 /* ========================= HEADING ========================= */
 h1, h2, h3, h4, h5, h6
   margin: 0
