--- a/stylesheets/tuktuk.widget.styl
+++ b/stylesheets/tuktuk.widget.styl
@@ -14,13 +14,12 @@
   & > *
     -webkit-transform: translate3d(0, 0, 0)
 
-.float
-  &.clear
-    clear: both
-  &.left
-    float: left
-  &.right
-    float: right
+.clear
+  clear: both
+.left
+  float: left
+.right
+  float: right
 
 dimension = 20px
 .margin_none
@@ -49,13 +48,12 @@ dimension = 20px
 .padding_bottom
   padding-bottom: dimension
 
-.display
-  &.block
-    display: block
-  &.inline
-    display: inline-block
-  &.none
-    display: none
+.block
+  display: block
+.inline
+  display: inline-block
+.none
+  display: none
 
 
 /* ================== IMAGE & MEDIA ================== */
