--- a/stylesheets/tuktuk.button.styl
+++ b/stylesheets/tuktuk.button.styl
@@ -6,10 +6,8 @@
   padding: 10px 16px
   border: none
   cursor: pointer
-
+  font-size: 1.0rem
   font-family: inherit
-  font-size: 1.0em
-  font-weight: 500
   line-height: font-size
   text-align: center
   text-decoration: none
@@ -32,22 +30,21 @@
   &.large
     height: h = 52px
     padding: 0 24px
-    font-size: 1.45em
-    font-weight: 300
-    line-height: h
+    font-size: 1.25rem
+    line-height: h !important
 
   &.small
     height: h = 28px
     padding: 0 12px
-    font-size: 0.9em
-    line-height: (h - 2)
+    font-size: 0.9rem
+    line-height: (h - 2) !important
     & > .icon
       height: 17px
 
   &.tiny
     height: h = 22px
     padding: 0 10px
-    font-size: 0.75em
-    line-height: (h - 2)
+    font-size: 0.75rem
+    line-height: (h - 2) !important
     & > .icon
       height: 12px
