Changes on stylesheets (.tag >> core)

--- a/stylesheets/tuktuk.widget.styl
+++ b/stylesheets/tuktuk.widget.styl
@@ -66,3 +66,11 @@ img
     height: auto
     &.rounded
       border-radius 50%
+
+/* ================== TAGs ================== */
+.tag
+  position: relative
+  padding: 3px 4px
+  font-size: 9px !important
+  line-height: 1.0em
+  text-transform: uppercase
