--- a/widgets/boxes/tuktuk.boxes.theme.styl
+++ b/widgets/boxes/tuktuk.boxes.theme.styl
@@ -11,41 +11,54 @@ aside_dark_anchor  = lighten(aside_dark, 15%)
 section            = bck_light
 dimension          = 16px
 
-/* ====================== ASIDE ====================== */
-aside
-  &.light
-    background: aside
-    &
-      color: lighten(text, 15%)
+[data-tuktuk=boxes]
+  /* ====================== ASIDE ====================== */
+  & > aside
+    &.light
+      background: aside
+      &
+        color: lighten(text, 15%)
+      & a
+        color: lighten(text, 25%)
+      & hr
+        background: aside_light_anchor
+
+    &.dark
+      background: aside_dark
+      &
+        color: lighten(aside_dark, 90%)
+      & a
+        color: #fff
+      & hr
+        background: #444
+
     & a
-      color: lighten(text, 25%)
-    & hr
-      background: aside_light_anchor
+      &:hover, &:active, &.active
+          color: color
 
-  &.dark
-    background: aside_dark
-    &
-      color: lighten(aside_dark, 90%)
-    & a
-      color: #fff
-    & hr
-      background: #444
+    & > header .avatar
+      border-radius 4px
 
+  /* ====================== SECTION ====================== */
+  & > section
+    background: section
+    box-shadow: inset 4px 0 0 rgba(0,0,0,0.025)
 
-  & a
-    &:hover, &:active, &.active
-        color: color
+  /* ====================== NAVIGATION ====================== */
+  & nav
+    &[data-filter] > a
+      border-radius 2px
+      color: lighten(text, 40%)
+      &:hover, &:active, &.active
+        color: text
+        background: darken(section, 5%)
+        box-shadow 0 -1px 0 darken(section, 20%), 0 1px 0 lighten(section, 80%)
 
-  & > header .avatar
-    border-radius 4px
+    &[data-link] > a > .icon
+      color: aside_light_anchor
 
-  & > article .avatar
-    border-radius dimension
-
-/* ====================== SECTION ====================== */
-section
-  background: section
-  box-shadow: inset 4px 0 0 rgba(0,0,0,0.025)
+    & > a > small
+      opacity: 0.5
 
 /* ====================== HEADER/FOOTER ====================== */
 header
@@ -57,46 +70,24 @@ header
     background: color = aside_dark_header
     box-shadow: inset 0 -1px 0 aside_dark_anchor
   section > &
-    border-bottom: dotted 1px aside_light_anchor
+      border-bottom: dotted 1px aside_light_anchor
+
 footer
-  background: rgba(0,0,0,0.1)
+  aside > &, section > &
+    background: rgba(0,0,0,0.1)
 
 /* ====================== ARTICLE ====================== */
 article
-  aside.light &
+  aside.light > &
     box-shadow inset -1px 0 0 aside_light_anchor
 
-/* ====================== NAVIGATION ====================== */
-nav
-  &[data-filter]
-    & > a
-      border-radius 2px
-      color: lighten(text, 40%)
-      &:hover, &:active, &.active
-        color: text
-        background: darken(section, 5%)
-        box-shadow 0 -1px 0 darken(section, 20%), 0 1px 0 lighten(section, 80%)
-
-  &[data-menu]
-    & > a
-      aside.light &
-        border-bottom: dotted 1px aside_light_anchor
-        &:first-child
-          border-top: dotted 1px aside_light_anchor
-      aside.dark &
-        border-bottom: dotted 1px aside_dark_anchor
-        &:first-child
-          border-top: dotted 1px aside_dark_anchor
-
-  &[data-link] > a > .icon
-    color: aside_light_anchor
-
-  & > a > small
-    opacity: 0.5
-
-/* ====================== WIDGET ====================== */
-.tag
-  color: #fff !important
-  background: color
-  border: solid 1px rgba(0,0,0,0.1)
-  border-radius 2px
+/* ====================== MENU ====================== */
+[data-menu] > a
+  aside.light &
+    border-bottom: dotted 1px aside_light_anchor
+    &:first-child
+      border-top: dotted 1px aside_light_anchor
+  aside.dark &
+    border-bottom: dotted 1px aside_dark_anchor
+    &:first-child
+      border-top: dotted 1px aside_dark_anchor
