--- a/package/theme.tuktuk.styl
+++ b/package/theme.tuktuk.styl
@@ -2,7 +2,6 @@
 @import "__theme.styl"
 /* ====================== FONT-FACE ====================== */
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700")
-// @import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,700")
 
 body
   color: #000
@@ -118,6 +117,7 @@ body
     border-radius 1px
     box-shadow inset 0 1px 0 rgba(255,255,255,0.2)
     border: solid 1px rgba(0,0,0,0.1)
+    font-weight: 400
     &:active
       box-shadow inset 0 0 128px rgba(0,0,0,0.25)
       border-color: none
@@ -140,3 +140,10 @@ body
     opacity: 0.9
     &:hover, &:active
       opacity: 1.0
+
+
+  /* ====================== TAGs ====================== */
+  & .tag
+    color: #fff !important
+    border: solid 1px rgba(0,0,0,0.1)
+    border-radius 2px
