--- a/package/widgets/boxes/tuktuk.boxes.css
+++ b/package/widgets/boxes/tuktuk.boxes.css
@@ -2,11 +2,11 @@
 [data-tuktuk=boxes] > aside,[data-tuktuk=boxes] > section{display:-webkit-box;display:-moz-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;}
 [data-tuktuk=boxes] > aside > header,[data-tuktuk=boxes] > section > header,[data-tuktuk=boxes] > aside > footer,[data-tuktuk=boxes] > section > footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:block;height:44px;line-height:44px;padding:8px;}
 [data-tuktuk=boxes] > aside > header > *,[data-tuktuk=boxes] > section > header > *,[data-tuktuk=boxes] > aside > footer > *,[data-tuktuk=boxes] > section > footer > *{height:28px;line-height:28px}
-[data-tuktuk=boxes] aside{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:240px;z-index:1;}
-[data-tuktuk=boxes] aside.absolute{position:absolute;height:100%;-webkit-transition:all 250ms;-moz-transition:all 250ms;-ms-transition:all 250ms;-o-transition:all 250ms;transition:all 250ms;-webkit-transform:translate3d(-100%,0,0);-moz-transform:translate3d(-100%,0,0);-ms-transform:translate3d(-100%,0,0);-o-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0)}
-[data-tuktuk=boxes] aside.active{-webkit-transform:translate3d(0%,0,0);-moz-transform:translate3d(0%,0,0);-ms-transform:translate3d(0%,0,0);-o-transform:translate3d(0%,0,0);transform:translate3d(0%,0,0)}
-[data-tuktuk=boxes] section{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;z-index:0}
-[data-tuktuk=boxes] article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
+[data-tuktuk=boxes] > aside > article,[data-tuktuk=boxes] > section > article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
+[data-tuktuk=boxes] > aside{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:240px;z-index:1;}
+[data-tuktuk=boxes] > aside.absolute{position:absolute;height:100%;-webkit-transition:all 250ms;-moz-transition:all 250ms;-ms-transition:all 250ms;-o-transition:all 250ms;transition:all 250ms;-webkit-transform:translate3d(-100%,0,0);-moz-transform:translate3d(-100%,0,0);-ms-transform:translate3d(-100%,0,0);-o-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0);}
+[data-tuktuk=boxes] > aside.absolute.active{-webkit-transform:translate3d(0%,0,0);-moz-transform:translate3d(0%,0,0);-ms-transform:translate3d(0%,0,0);-o-transform:translate3d(0%,0,0);transform:translate3d(0%,0,0)}
+[data-tuktuk=boxes] > section{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;z-index:0}
 [data-tuktuk=boxes] ul{list-style:none;}
 [data-tuktuk=boxes] ul.totals{display:-webkit-box;display:-moz-box;display:box;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;text-align:center;}
 [data-tuktuk=boxes] ul.totals > li{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;}
@@ -22,9 +22,8 @@
 [data-tuktuk=boxes] nav[data-button] > *{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:inherit}
 [data-tuktuk=boxes] nav > a > small{position:relative;margin-left:4px;bottom:1px}
 [data-tuktuk=boxes] .margin{margin:16px}
-[data-tuktuk=boxes] .tag{position:relative;padding:3px 4px;font-size:10px;line-height:1em;text-transform:uppercase}
-[data-tuktuk=boxes] header .session > *{float:left}
-[data-tuktuk=boxes] header .session > .avatar{height:28px;margin-right:8px}
-[data-tuktuk=boxes] header .session > button,[data-tuktuk=boxes] header .session > .button{margin-top:3.2px;float:right}
-[data-tuktuk=boxes] aside > article .avatar{height:208px;width:208px}
-[data-tuktuk=boxes] aside hr{border:0;height:1px;margin:0}
+[data-tuktuk=boxes] > aside > header .session > *,[data-tuktuk=boxes] > section > header .session > *{float:left}
+[data-tuktuk=boxes] > aside > header .session > .avatar,[data-tuktuk=boxes] > section > header .session > .avatar{height:28px;margin-right:8px}
+[data-tuktuk=boxes] > aside > header .session > button,[data-tuktuk=boxes] > section > header .session > button,[data-tuktuk=boxes] > aside > header .session > .button,[data-tuktuk=boxes] > section > header .session > .button{margin-top:3.2px;float:right}
+[data-tuktuk=boxes] > aside > article .avatar{height:208px;width:208px}
+[data-tuktuk=boxes] > aside hr{border:0;height:1px;margin:0}
