--- a/package/widgets/modal/tuktuk.modal.css
+++ b/package/widgets/modal/tuktuk.modal.css
@@ -10,6 +10,8 @@
 [data-tuktuk="modal"].column_10{width:768px;margin-left:-384px}
 [data-tuktuk="modal"].column_11{width:848px;margin-left:-424px}
 [data-tuktuk="modal"].column_12{width:928px;margin-left:-464px}
+[data-tuktuk="modal"].side{right:0;left:auto;top:44px;bottom:44px;height:auto;margin:0;-webkit-box-shadow:1px 0 4px #000;-moz-box-shadow:1px 0 4px #000;-ms-box-shadow:1px 0 4px #000;-o-box-shadow:1px 0 4px #000;box-shadow:1px 0 4px #000;-webkit-transform:translateX(100%);-moz-transform:translateX(100%);-ms-transform:translateX(100%);-o-transform:translateX(100%);transform:translateX(100%);}
+[data-tuktuk="modal"].side.active{-webkit-transform:translateX(0%);-moz-transform:translateX(0%);-ms-transform:translateX(0%);-o-transform:translateX(0%);transform:translateX(0%)}
 [data-tuktuk="modal"] > hr{border:solid 1px #ccc}
 @media only screen and (max-width: 528px){[data-tuktuk="modal"]{left:5% !important;width:90% !important;margin-left:0 !important}
 }[data-tuktuk="lock"]{width:100%;height:100%;position:fixed;top:0;bottom:0;left:0;background:rgba(0,0,0,0.75);z-index:1980;visibility:hidden;opacity:0;-webkit-transition:all 300ms 100ms;-moz-transition:all 300ms 100ms;-ms-transition:all 300ms 100ms;-o-transition:all 300ms 100ms;transition:all 300ms 100ms;}
