--- a/package/widgets/boxes/tuktuk.boxes.css
+++ b/package/widgets/boxes/tuktuk.boxes.css
@@ -1,7 +1,7 @@
 [data-tuktuk=boxes]{position:absolute;height:100%;width:100%;display:-webkit-box;display:-moz-box;display:box;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;}
 [data-tuktuk=boxes] > aside,[data-tuktuk=boxes] > section{display:-webkit-box;display:-moz-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;}
-[data-tuktuk=boxes] > aside > header,[data-tuktuk=boxes] > section > header,[data-tuktuk=boxes] > aside > footer,[data-tuktuk=boxes] > section > footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:block;height:44px;line-height:44px;padding:8px;}
-[data-tuktuk=boxes] > aside > header > *,[data-tuktuk=boxes] > section > header > *,[data-tuktuk=boxes] > aside > footer > *,[data-tuktuk=boxes] > section > footer > *{height:28px;line-height:28px}
+[data-tuktuk=boxes] > aside > header,[data-tuktuk=boxes] > section > header,[data-tuktuk=boxes] > aside > footer,[data-tuktuk=boxes] > section > footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:block;height:44px;line-height:44px;padding:7px;}
+[data-tuktuk=boxes] > aside > header > *,[data-tuktuk=boxes] > section > header > *,[data-tuktuk=boxes] > aside > footer > *,[data-tuktuk=boxes] > section > footer > *{height:30px;line-height:30px}
 [data-tuktuk=boxes] > aside > article,[data-tuktuk=boxes] > section > article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
 [data-tuktuk=boxes] > aside{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:240px;z-index:1;}
 [data-tuktuk=boxes] > aside.absolute{position:absolute;height:100%;-webkit-transition:all 250ms;-moz-transition:all 250ms;-ms-transition:all 250ms;-o-transition:all 250ms;transition:all 250ms;-webkit-transform:translate3d(-100%,0,0);-moz-transform:translate3d(-100%,0,0);-ms-transform:translate3d(-100%,0,0);-o-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0);}
@@ -13,17 +13,21 @@
 [data-tuktuk=boxes] ul.totals > li > strong{display:block;font-weight:400;font-size:1.75em;line-height:.9em}
 [data-tuktuk=boxes] ul.totals > li > small{text-transform:uppercase;font-size:.85em}
 [data-tuktuk=boxes] nav[data-filter]{font-size:.8em;}
-[data-tuktuk=boxes] nav[data-filter] > a{margin-right:8px;padding:6.4px 10.666666666666666px;}
+[data-tuktuk=boxes] nav[data-filter] > a{margin-right:7px;padding:5.6px 9.333333333333334px;}
 [data-tuktuk=boxes] nav[data-filter] > a:last-child{margin-right:0}
-[data-tuktuk=boxes] nav[data-menu] > a{display:block;padding:10.666666666666666px}
+[data-tuktuk=boxes] nav[data-menu] > a{display:block;padding:9.333333333333334px}
 [data-tuktuk=boxes] nav[data-link] > a{display:block;font-size:.8em;line-height:2em;}
-[data-tuktuk=boxes] nav[data-link] > a > .icon{position:relative;top:3px;margin-right:5.333333333333333px;font-size:1.5em;font-weight:normal}
+[data-tuktuk=boxes] nav[data-link] > a > .icon{position:relative;top:3px;margin-right:4.666666666666667px;font-size:1.5em;font-weight:normal}
 [data-tuktuk=boxes] nav[data-button]{display:-webkit-box;display:-moz-box;display:box;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;}
 [data-tuktuk=boxes] nav[data-button] > *{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:inherit}
 [data-tuktuk=boxes] nav > a > small{position:relative;margin-left:4px;bottom:1px}
-[data-tuktuk=boxes] .margin{margin:16px}
+[data-tuktuk=boxes] .margin{margin:14px}
+[data-tuktuk=boxes] .margin_left{margin-left:14px}
+[data-tuktuk=boxes] .margin_right{margin-right:14px}
+[data-tuktuk=boxes] .margin_top{margin-top:14px}
+[data-tuktuk=boxes] .margin_bottom{margin-bottom:14px}
 [data-tuktuk=boxes] > aside > header .session > *,[data-tuktuk=boxes] > section > header .session > *{float:left}
-[data-tuktuk=boxes] > aside > header .session > .avatar,[data-tuktuk=boxes] > section > header .session > .avatar{height:28px;margin-right:8px}
-[data-tuktuk=boxes] > aside > header .session > button,[data-tuktuk=boxes] > section > header .session > button,[data-tuktuk=boxes] > aside > header .session > .button,[data-tuktuk=boxes] > section > header .session > .button{margin-top:3.2px;float:right}
-[data-tuktuk=boxes] > aside > article .avatar{height:208px;width:208px}
+[data-tuktuk=boxes] > aside > header .session > .avatar,[data-tuktuk=boxes] > section > header .session > .avatar{height:30px;margin-right:7px}
+[data-tuktuk=boxes] > aside > header .session > button,[data-tuktuk=boxes] > section > header .session > button,[data-tuktuk=boxes] > aside > header .session > .button,[data-tuktuk=boxes] > section > header .session > .button{margin-top:2.8px;float:right}
+[data-tuktuk=boxes] > aside > article .avatar{height:212px;width:212px}
 [data-tuktuk=boxes] > aside hr{border:0;height:1px;margin:0}
