Button with only .icon

--- a/stylesheets/tuktuk.button.styl
+++ b/stylesheets/tuktuk.button.styl
@@ -18,7 +18,7 @@
     color: #999 !important
 
   &.icon
-    padding: 1px 9px
+    padding: 2px 9px 0 9px
   &:not(.icon)
     padding: 0 16px
     & .icon
@@ -46,7 +46,7 @@
     font-size: 13px
     line-height: (h - 2)
     &.icon
-      padding: 1px 8px
+      padding: 1px 8px 0 8px
     &:not(.icon)
       padding: 0 12px
       & > .icon
@@ -57,7 +57,7 @@
     font-size: 11px
     line-height: (h - 2)
     &.icon
-      padding: 0 6px
+      padding: 1px 6px 0 6px
     &:not(.icon)
       padding: 0 10px
       & > .icon
