--- a/widgets/modal/tuktuk.modal.styl
+++ b/widgets/modal/tuktuk.modal.styl
@@ -2,12 +2,13 @@
 @import "../../stylesheets/__constants.styl"
 
 padding = 12px
+
 [data-tuktuk="modal"]
   position: fixed
   top: 0
   left: 50%
-  padding: padding
-  background: #f5f5f5
+  background: #eee
+
   border-radius 0 0 1px 1px
   box-shadow 0 1px 4px #000
   transition all 300ms 100ms
@@ -15,6 +16,19 @@ padding = 12px
   opacity: 0
   visibility: hidden
   z-index: 1981
+
+  display-box()
+  box-orient(vertical)
+
+
+  & > *
+    padding: padding
+
+  & > header, > footer
+    background: #e5e5e5
+
+  & > article
+    box-flex(1)
 
   &.active
     transform translateY(0%)
@@ -54,19 +68,19 @@ padding = 12px
 
   &.side
     right: 0px
+    top: 0px
+    bottom: 0px
     left: auto
-    top: size = 44px
-    bottom: size
     height: auto
     margin: 0
-    box-shadow 1px 0 4px #000
+    box-shadow -1px 0 4px #000
     transform translateX(100%)
     &.active
       transform translateX(0%)
 
 
-  & > hr
-    border: solid 1px #ccc
+
+
 
 @media only screen and (max-width: 528px)
   [data-tuktuk="modal"]
