--- a/stylesheets/__vendor.styl
+++ b/stylesheets/__vendor.styl
@@ -20,7 +20,9 @@ background-image()
 /* ====================== FLEXBOX ====================== */
 display-box()
   display -webkit-box
-  display -moz-box
+  display -moz-box !important
+  display -ms-box
+  display -o-box
   display box
 
 box-pack()
