--- a/stylesheets/__vendor.styl
+++ b/stylesheets/__vendor.styl
@@ -28,11 +28,17 @@ display-box()
 box-pack()
   vendor('box-pack', arguments)
 
+box-align()
+  vendor('box-align', arguments)
+
 box-flex()
   vendor('box-flex', arguments)
 
 box-orient()
   vendor('box-orient', arguments)
+
+box-direction()
+  vendor('box-direction', arguments)
 
 /* ====================== TRANSITIONS ====================== */
 transition()
